# cloud-custodian

./: Makefile  build.sh  pyproject.toml  requirements-dev.txt
c7n/: commands.py  query.py
c7n/resources/: __init__.py
docker/: cli  cli-distroless  mailer  mailer-distroless  org  org-distroless  policystream  policystream-distroless
docs/source/azure/configuration/: authentication.rst
tests/: test_docker.py  test_packaging.py
tools/c7n_aliyun/: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_aliyun/c7n_aliyun/: client.py  entry.py  handler.py  mu.py  output.py  policy.py  provider.py  query.py
tools/c7n_aliyun/c7n_aliyun/actions/: core.py  cscc.py  iampolicy.py  labels.py  notify.py
tools/c7n_aliyun/c7n_aliyun/filters/: filter.py  labels.py
tools/c7n_aliyun/c7n_aliyun/resources/: cdn.py  disk.py  ecs.py  eip.py  mongodb.py  oss.py  polardb.py  ram.py  rds.py  redis.py  resource_map.py  slb.py  vpc.py
tools/c7n_aliyun/test/: aliyun.py
tools/c7n_azure/: pyproject.toml  requirements.txt
tools/c7n_azure/c7n_azure/: constants.py  provider.py  query.py  session.py  storage_utils.py  utils.py
tools/c7n_azure/c7n_azure/resources/: access_control.py  key_vault.py  key_vault_certificate.py  key_vault_keys.py  key_vault_storage.py  network_security_group.py
tools/c7n_azure/tests_azure/: azure_common.py  test_provider.py  test_session.py  test_storageutils.py
tools/c7n_gcp/: pyproject.toml
tools/c7n_huawei/: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_huawei/c7n_huawei/: client.py  entry.py  handler.py  mu.py  output.py  policy.py  provider.py  query.py
tools/c7n_huawei/c7n_huawei/actions/: __init__.py  core.py  cscc.py  iampolicy.py  labels.py  notify.py
tools/c7n_huawei/c7n_huawei/filters/: filter.py  labels.py
tools/c7n_huawei/c7n_huawei/resources/: dds.py  disk.py  ecs.py  eip.py  elb.py  iam.py  obs.py  rds.py  redis.py  resource_map.py  securitygroup.py  vpc.py
tools/c7n_huawei/test/: huawei.py
tools/c7n_kube/: pyproject.toml
tools/c7n_logexporter/: pyproject.toml
tools/c7n_mailer/: pyproject.toml
tools/c7n_mailer/c7n_mailer/azure_mailer/: handle.py  utils.py
tools/c7n_mailer/tests/: test_misc.py
tools/c7n_openstack/: .gitignore  pyproject.toml  requirements.txt  setup.py
tools/c7n_openstack/c7n_openstack/: client.py  entry.py  handler.py  policy.py  provider.py  query.py
tools/c7n_openstack/c7n_openstack/actions/: core.py  cscc.py
tools/c7n_openstack/c7n_openstack/filters/: filter.py  labels.py
tools/c7n_openstack/c7n_openstack/resources/: __init__.py  flavor.py  image.py  network.py  project.py  resource_map.py  router.py  security-groups.py  server.py  user.py  volume.py
tools/c7n_openstack/test/: openstack.py
tools/c7n_openstack/test/data.flight/: default.yml
tools/c7n_org/: pyproject.toml
tools/c7n_policystream/: pyproject.toml
tools/c7n_sphinxext/: pyproject.toml
tools/c7n_tencent/: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_tencent/c7n_tencent/: __init__.py  client.py  entry.py  filter_util.py  handler.py  mu.py  page.py  policy.py  provider.py  query.py
tools/c7n_tencent/c7n_tencent/actions/: cscc.py  iampolicy.py  labels.py  notify.py
tools/c7n_tencent/c7n_tencent/filters/: filter.py  labels.py
tools/c7n_tencent/c7n_tencent/resources/: cdb.py  clb.py  cos.py  cvm.py  dcdb.py  disk.py  eip.py  es.py  mongodb.py  postgres.py  redis.py  resource_map.py  securitygroup.py  vpc.py
tools/c7n_tencent/test/: tencent.py
tools/c7n_trailcreator/: pyproject.toml
tools/c7n_vsphere/: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
tools/c7n_vsphere/c7n_vsphere/: client.py  entry.py  handler.py  policy.py  provider.py  query.py
tools/c7n_vsphere/c7n_vsphere/actions/: cscc.py
tools/c7n_vsphere/c7n_vsphere/filters/: filter.py  labels.py
tools/c7n_vsphere/c7n_vsphere/resources/: cluster.py  datacenter.py  datastore.py  folder.py  host.py  network.py  resource_map.py  resourcepool.py  vm.py
tools/c7n_vsphere/test/: vsphere.py
tools/dev/: dockerpkg.py
